rustdocs/errors/rust-bitcoin-hashes-src-sha256-mod.rs.txt
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internals`
 --> ../rust-bitcoin/hashes/src/sha256/crypto.rs:8:5
  |
8 | use internals::slice::SliceExt;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
  |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
 --> ../rust-bitcoin/hashes/src/sha256/mod.rs:5:1
  |
5 + extern crate internals;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internals`
  --> ../rust-bitcoin/hashes/src/sha256/mod.rs:11:5
   |
11 | use internals::slice::SliceExt;
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
   |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
   |
 5 + extern crate internals;
   |

error[E0432]: unresolved import `core`
 --> ../rust-bitcoin/hashes/src/sha256/mod.rs:9:5
  |
9 | use core::{cmp, convert, fmt};
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved imports `crate::incomplete_block_len`, `crate::sha256d`
  --> ../rust-bitcoin/hashes/src/sha256/mod.rs:13:13
   |
13 | use crate::{incomplete_block_len, sha256d, HashEngine as _};
   |             ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^ no `sha256d` in the root
   |             |
   |             no `incomplete_block_len` in the root

error[E0432]: unresolved imports `crate::sha256t`, `crate::sha256t_tag`
  --> ../rust-bitcoin/hashes/src/sha256/mod.rs:15:13
   |
15 | use crate::{sha256t, sha256t_tag};
   |             ^^^^^^^  ^^^^^^^^^^^ no `sha256t_tag` in the root
   |             |
   |             no `sha256t` in the root

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internal_macros`
  --> ../rust-bitcoin/hashes/src/sha256/mod.rs:17:8
   |
17 | crate::internal_macros::general_hash_type! {
   |        ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `internal_macros`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internal_macros`
   --> ../rust-bitcoin/hashes/src/sha256/mod.rs:106:12
    |
106 |     crate::internal_macros::engine_input_impl!();
    |            ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `internal_macros`

error[E0404]: expected trait, found struct `crate::HashEngine`
   --> ../rust-bitcoin/hashes/src/sha256/mod.rs:100:6
    |
100 | impl crate::HashEngine for HashEngine {
    |      ^^^^^^^^^^^^^^^^^ not a trait

error[E0573]: expected type, found derive macro `Hash`
   --> ../rust-bitcoin/hashes/src/sha256/mod.rs:101:17
    |
101 |     type Hash = Hash;
    |                 ^^^^ not a type
    |
help: consider importing this trait instead
    |
  9 + use std::hash::Hash;
    |

error[E0573]: expected type, found derive macro `Hash`
   --> ../rust-bitcoin/hashes/src/sha256/mod.rs:110:6
    |
110 | impl Hash {
    |      ^^^^ not a type
    |
help: consider importing this trait instead
    |
  9 + use std::hash::Hash;
    |

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0404, E0432, E0433, E0573.
For more information about an error, try `rustc --explain E0404`.
